--- a/src/app/components/turn/add-turn/add-turn.component.html
+++ b/src/app/components/turn/add-turn/add-turn.component.html
@@ -1,4 +1,4 @@
-<!-- <form [formGroup]="addTurn" class="turn-form">
+<form [formGroup]="addTurn" class="turn-form">
     <div class="form-group">
         <label for="date">Date:</label>
         <input type="date" id="date" formControlName="date" class="form-control">
@@ -35,4 +35,4 @@
         </div>
     </div>
     <button (click)="save()" [disabled]="addTurn.invalid" class="btn btn-primary">Save New Turn</button>
-</form> -->
+</form>
